# Tauri-Transcribe

./: AGENTS.md  README.md  SPEC.md  index.html  package-lock.json  package.json
src/: App.tsx  hub.d.ts  hub.js  models.d.ts  models.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
